[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smart-rot13-cipher"
version = "1.0.0"
description = "Smart rot13 and caesar cipher with n shifts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "raccoonette"}]

[project.urls]
Homepage = "https://github.com/MopicMP/smart-rot13-cipher"
